Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
Impala 4.2.0
-
None
-
ghx-label-1
Description
When reading a table written with Hive, I ran into
WARNINGS: org.apache.hadoop.io.compress.DeflateCodec Data error, likely data corrupted in this block. (1 of 16 similar)
DeflateCodec is an alias to DefaultCodec. Impala's fine with DefaultCodec, but fails to recognize DeflateCodec.
Attachments
Issue Links
- relates to
-
IMPALA-12276 Crash reading sequence file with zstd compression
- Open