be/src/util/codec.h
@@ -44,6 +44,7 @@ class Codec {
  public:
   /// These are the codec string representations used in Hadoop.
   static const char* const DEFAULT_COMPRESSION;
+  static const char* const DEFLATE_COMPRESSION;
   static const char* const GZIP_COMPRESSION;
   static const char* const BZIP2_COMPRESSION;
   static const char* const SNAPPY_COMPRESSION;
